MDEV-8932: innodb buffer pool hit rate is less than zero

In buffer pool read hit rate calculation can lead rate that is
less than zero.